...
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="leT-tl-Uoa" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextFiel
                                                <rect key="frame" x="42" y="210" width="243" height="40"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="chv-co-HG7" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                                <rect key="frame" x="44" y="260" width="241" height="40"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                <color key="backgroundColor" red="0.070588235289999995" green="0.078431372550000003" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First Name" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lwJ-Pb-Uuq" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                <rect key="frame" x="35" y="141" width="250" height="40"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Last Name" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ytu-OA-was" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                <rect key="frame" x="35" y="197" width="250" height="40"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <color key="value" red="0.72156862749999995" green="0.73725490199999999" blue="0.90588235289999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Mobile"/>
                                </userDefinedRuntimeAttributes>
                            </textField>
...
                                <rect key="frame" x="0.0" y="259" width="320" height="74"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MXZ-p2-XyL">
                                        <rect key="frame" x="8" y="5" width="43.5" height="20"/>
                                        <constraints>
...
                                <rect key="frame" x="0.0" y="341" width="320" height="115"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Followers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ul1-E7-4Hg">
                                        <rect key="frame" x="8" y="5" width="68.5" height="27"/>
                                        <constraints>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <state key="normal" title="Edit Profile">
                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                <state key="normal" title="Add More Photos/Videos"/>
                                <connections>
                                    <action selector="AddPhotoBtn:" destination="76N-8O-4jM" eventType="touchUpInside" id="9Fa-zF-Y8a"/>
...
                        <viewLayoutGuide key="safeArea" id="Qfj-pn-dNY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="FtB-Pz-ege"/>
                    <connections>
                        <outlet property="tableView" destination="uqV-2A-ZTr" id="NOM-MH-8fd"/>
...
                                </userDefinedRuntimeAttributes>
                            </textView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Date of birth" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lZi-Wg-3ke" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                <rect key="frame" x="17" y="249" width="288" height="35"/>
                                <color key="tintColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="zMU-5c-r6f">
                        <barButtonItem key="rightBarButtonItem" title="Update" id="QyW-nO-TXN">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="SIGN IN">
