...
                                </constraints>
                                <fontDescription key="fontDescription" name="Karla-Bold" family="Karla" pointSize="13"/>
                                <state key="normal" title="View More"/>
                                <connections>
                                    <action selector="viewAbout:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="pyj-WF-00u"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Karla-Bold" family="Karla" pointSize="13"/>
                                <state key="normal" title="View Followers"/>
                                <connections>
                                    <action selector="viewFollowers:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ZJj-Gq-U94"/>
...
                        <rect key="frame" x="0.0" y="500.5" width="355" height="200"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jtp-jl-xdg">
                                <rect key="frame" x="44" y="8" width="52.5" height="26"/>
                                <fontDescription key="fontDescription" name="Karla-Bold" family="Karla" pointSize="16"/>
...
                                <rect key="frame" x="268" y="8" width="75" height="26"/>
                                <fontDescription key="fontDescription" name="Karla-Bold" family="Karla" pointSize="13"/>
                                <state key="normal" title="View Photos"/>
                                <connections>
                                    <action selector="viewPhotos:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Jkl-ZP-a3r"/>
...
                        <rect key="frame" x="0.0" y="916.5" width="355" height="200"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Albums" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2k5-MV-a6u">
                                <rect key="frame" x="44" y="8" width="58.5" height="26"/>
                                <fontDescription key="fontDescription" name="Karla-Bold" family="Karla" pointSize="16"/>
...
                                <rect key="frame" x="263" y="8" width="80" height="26"/>
                                <fontDescription key="fontDescription" name="Karla-Bold" family="Karla" pointSize="13"/>
                                <state key="normal" title="View Albums"/>
                                <connections>
                                    <action selector="viewAlbums:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="3nv-TZ-6TZ"/>
...
                                <rect key="frame" x="283" y="8" width="60" height="20"/>
                                <fontDescription key="fontDescription" name="Karla-Bold" family="Karla" pointSize="13"/>
                                <state key="normal" title="View Map"/>
                                <connections>
                                    <action selector="viewMaps:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4yK-bC-pfu"/>
...
                                <rect key="frame" x="269" y="8" width="74" height="26"/>
                                <fontDescription key="fontDescription" name="Karla-Bold" family="Karla" pointSize="13"/>
                                <state key="normal" title="View Videos"/>
                                <connections>
                                    <action selector="viewVideo:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="5Vg-vd-OR2"/>
...
                <outlet property="userButton" destination="iSo-UO-gHC" id="u2U-32-TF5"/>
                <outlet property="userImage" destination="ABp-H5-ydD" id="d3R-HE-KGR"/>
                <outlet property="userName" destination="17v-NH-i7s" id="mEV-zt-RYK"/>
                <outlet property="videos_CV" destination="jNi-qp-jcX" id="Eti-da-VXE"/>
                <outlet property="viewMoreAbout" destination="Z3k-ch-wbe" id="oV3-XL-3yV"/>
...
