...
                        <constraints>
                            <constraint firstItem="8HS-if-RKr" firstAttribute="centerX" secondItem="0MR-s8-oUB" secondAttribute="centerX" id="EZm-P3-Mr6"/>
                            <constraint firstItem="8HS-if-RKr" firstAttribute="centerY" secondItem="0MR-s8-oUB" secondAttribute="centerY" id="yGC-ZF-XVQ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="IlA-Nd-DA2"/>
                    </view>
                    <navigationItem key="navigationItem" title="Tagged" id="ueI-c6-rO3">
                        <barButtonItem key="leftBarButtonItem" image="back" id="2Jr-fe-lae">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="Close_Btn:" destination="qJ0-g9-YfQ" id="lS8-uI-gYi"/>
                            </connections>
                        </barButtonItem>
...
                            <constraint firstItem="Npp-gJ-eR8" firstAttribute="leading" secondItem="HBf-oK-prT" secondAttribute="leading" id="rSj-t5-uro"/>
                            <constraint firstItem="AWT-Fc-cND" firstAttribute="top" secondItem="Npp-gJ-eR8" secondAttribute="bottom" id="vwt-zd-2dO"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="HBf-oK-prT"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Add Tag" id="HKn-fp-d4T">
                        <barButtonItem key="leftBarButtonItem" image="back" id="hPu-Oo-sfs">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="cancel:" destination="HFo-LD-Kbb" id="Teu-XT-UAJ"/>
                            </connections>
                        </barButtonItem>
...
                            <constraint firstItem="44m-Pd-0FQ" firstAttribute="leading" secondItem="V7M-VR-TpV" secondAttribute="leading" id="sjw-7d-ocG"/>
                            <constraint firstAttribute="trailing" secondItem="44m-Pd-0FQ" secondAttribute="trailing" id="tKB-G2-TfO"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="9f9-Og-fMY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Comments" leftItemsSupplementBackButton="YES" id="Dzr-Iu-5mN">
                        <barButtonItem key="backBarButtonItem" title="Back" id="1yF-Zu-gQe"/>
                        <barButtonItem key="leftBarButtonItem" image="back" id="HgA-SS-7mD">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="Back_btn:" destination="rTF-Ma-rfV" id="DFS-bK-8EH"/>
                            </connections>
                        </barButtonItem>
...
